[package]
name = "tdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
env_logger = "0.11.0"
gimli = "0.29.0"
hex = "0.4.3"
memmap2 = "0.9.0"
nix = "0.28.0"
object = "0.35.0"
once_cell = "1.15.0"
proc-maps = "0.3.0"
symbolic = { version = "9.1.4", default-features = false, features = [
    "demangle",
] }
syscalls = "0.6.6"

# TUI用
#tui = "0.17"
#crossterm = "0.22"

[build-dependencies]
bindgen = "0.69.0"
cc = "1.0.73"
